# partial_ucb

./: .gitignore  README.md  ackey.py  ackley.py  functions.py  gp.py  hello.py  main.py  norm.py  optimize.py  pyproject.toml  query_algorithm.py  run_all_experiments.py  util.py  visualize.py
benchmarks/: ackley.py  freesolv3.py  freesolv_NN_rep3dim.csv  norm.py  pharma.py
config/: ackey.toml  ackley.toml  ackley_full_logei.toml  ackley_full_ucb.toml  norm.toml
examples/: example.ipynb
pucb/: functions.py  gp.py  optimize.py  problem.py  query_algorithm.py  single_run.py
pucb/test_functions/: ackley.py  freesolv3.py  norm.py  pharma.py
tests/: test_single_run.py  test_util.py
