[project]
name = "partial-ucb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "botorch>=0.13.0",
    "ipykernel>=6.29.5",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "seaborn>=0.13.2",
    "tomli-w>=1.2.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
]
